<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_13sdp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@android:color/white"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_height="wrap_content"
                android:id="@+id/relativelayout1">
                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:scaleType="centerCrop"-->
                    <!--android:layout_centerHorizontal="true"-->
                    <!--android:id="@+id/gifImageView"-->
                    <!--/>-->

            </RelativeLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativelayout1">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_12sdp">
                   <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_22ssp"
                        android:paddingRight="@dimen/_14sdp"
                        android:paddingLeft="@dimen/_14sdp"
                        android:gravity="center"

                        android:id="@+id/title"
                        android:textAlignment="center"
                        android:text="@string/this_is_dialog_title"
                        />
                  <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_marginTop="@dimen/_14sdp"
                        android:gravity="center"
                        android:id="@+id/message"
                        android:textColor="@color/black"
                        android:text="@string/try_again"
                        android:textSize="@dimen/_12sdp"
                        android:layout_below="@+id/title"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/message"
                        android:orientation="horizontal"
                        android:weightSum="100"
                        android:layout_marginTop="@dimen/_27sdp"
                        android:gravity="center">

                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:text="@string/cancel"
                            android:textAllCaps="false"
                            android:id="@+id/negativeBtn"
                            android:background="@drawable/curved_shape_two"
                            android:textColor="#ffffff"
                            android:layout_marginRight="@dimen/_13sdp"
                            android:visibility="gone"
                            />
                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:textAllCaps="false"
                            android:text="@string/button_ok"
                            android:textSize="@dimen/_17ssp"
                            android:id="@+id/positiveBtn"
                            android:background="@drawable/yellow_solid_button_shape"
                            android:textColor="@color/colorPrimary"
                            />
                    </LinearLayout>
                </RelativeLayout>
            </ScrollView>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>