<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="otpFrgViewModel"
            type="com.example.indianicassigment.view.fragment.otp.OtpViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            android:visibility="gone"
            layout="@layout/header_view"
            android:id="@+id/header"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/white"
            android:padding="@dimen/_16sdp"
            android:paddingBottom="@dimen/_30sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_110sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:src="@drawable/login_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.example.indianicassigment.utils.PinEntryEditText
                android:id="@+id/txt_pin_entry"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_17sdp"
                app:layout_constraintTop_toBottomOf="@+id/imgLogo"
                app:layout_constraintStart_toStartOf="parent"
                app:pinTextBottomPadding="@dimen/_14sdp"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/white"
                android:cursorVisible="true"
                android:digits="1234567890"
                android:inputType="numberPassword"
                android:maxLength="6"
                app:pinBackgroundDrawable="@drawable/edit_text_otp"
                android:textIsSelectable="false"
                android:textSize="@dimen/_15ssp"
                app:pinAnimationType="fromBottom"
                app:pinLineStroke="1dp"
                app:pinLineColors="@android:color/black"
                app:pinBackgroundIsSquare="true"
                app:pinCharacterSpacing="@dimen/_5sdp"
                />


            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bg_btn_gradient"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_pin_entry" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="center"

                app:layout_constraintTop_toBottomOf="@+id/btnSubmit"
                android:text="@string/expires_in"
                android:textSize="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:id="@+id/txttimeHint"
                app:layout_constraintEnd_toStartOf="@+id/countDownTimer"
                android:layout_marginRight="@dimen/_10sdp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/countDownTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="01:59"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintTop_toBottomOf="@+id/btnSubmit" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txttimeHint">


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/did_nt_receive_the_otp"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/textResendOTp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resend_otp_cap"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="@dimen/_13ssp" />


            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>